full-moon/tests/cases/fail/parser/local-function-5/error_display.snap
---
source: full-moon/tests/fail_cases.rs
assertion_line: 56
expression: "String::from_utf8(output.into_inner()).unwrap()"
input_file: full-moon/tests/cases/fail/parser/local-function-5
---
error[ast]: unexpected token `do`. do (expected a function name)
  ┌─ source.lua:1:16
  │
1 │ local function do()
  │                ^^

error[ast]: unexpected token `(`. ( (expected an expression after `(`)
  ┌─ source.lua:1:18
  │
1 │ local function do()
  │                  ^

error[ast]: unexpected token `)`. ) (unexpected token, this needs to be a statement)
  ┌─ source.lua:1:19
  │
1 │ local function do()
  │                   ^


